@@ -1,5 +1,9 @@
 2013-11-13  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
+	* index.php: Fixed a little error.
+
+2013-11-13  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
 	* operation/leads/lead_detail.php: Added massive
 	operations to the lead list (assign, close and delete).
 	
